[package]
name = "cpi-examples"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_examples"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["mainnet"]
mainnet = []

[dependencies]
anchor-lang = { version="0.25.0" }
anchor-spl = {version="0.25.0", features = ["dex"] }
volt-abi = { version="0.11.0", features = ["cpi"]}
num-traits = "0.2.14"
solana-program = "=1.10.29"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = [
  "no-entrypoint"
] }
arrayref = "0.3.6"
num-derive = "0.2"
num_enum = "0.5.0"
